Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.18
* Fixed missing template for CSV pricelists (Chris T)
* Added ODS pricelists (Chris T)

Changelog for 1.3.17
* Address now shows on ECA selection screen (Erik H)
* Taxes::Simple now respects min/max values based on subtotal (Chris T)
* Fixed company name/address missing from income statement (Chris T, h/t Mark L)
* Fixed company name/address missing from balance sheet (Chris T, h/t Mark L)
* Optional image retrieval with size detection for latex templates (Chris T)
* Added option to attach images to LaTeX PDF invoices/orders/etc (Chris T)
* Corrected one is_zero error with latest Math::BigInt (Chris T)
* Fixed file uploads sometimes hanging (Chris T)
* Fixed file uploads sometimes throwing action not found errors (Chris T)
* Fixed helpful DB error messages not displayed (Chris T)
* Fixing Form.pm so that max_post_size = -1 behaves as in CGI::Simple (Chris T)
* Fixed internal server error on tax lookup (Chris T)
* Better error message on db version error (Herman V)
* Fixed parsing error in xedemo bin_list.tex (Erik H)

Chris T is Chris Travers
Erik H is Erik Huelsmann
Herman V is Herman Vierendiels
Mark L is Matt Lubratt

Changelog for 1.3.16

* Changes in <head> element for non-Latin characters, HTML invoices (Erik H)
* Corrected untranslated string in Contact management screen (Chris T)
* Corrected permissions issue creating pricelist (Chris T, 3513861)
* Correcting ordering of aging reports so currencies are clustered (Chris T)
* Fixed curr totals not showing for aging rpts (Chris T, 3512591, h/t John L)
* Fixed new user screen not respecting default country (Chris T, 3513760)
* Fixed hash(...) in HTML payment receipt (Chris T, 3515924, h/t Michael R)
* Fixed errors about Concat() not found on Pg 8.4 (Erik H)
* Fixed can't edit templates with absolute templates path (Chris T 3516725)
* Added API for minimum value for taxes for local tax modules (Chris T)